# rust_ws_practice

./: .gitignore  Taskfile.yml  docker-compose.yml
app/: Cargo.toml  Dockerfile.dev
app/.devcontainer/: .devcontainer.json
app/graphql/: Cargo.toml
app/graphql/src/: context.rs  lib.rs  macros.rs  schema.rs
app/graphql/src/buildings/: mod.rs
app/graphql/src/lessors/: mod.rs
app/graphql/src/users/: mod.rs
app/sql/: Cargo.toml
app/sql/src/: lib.rs
app/sql/src/buildings/: mod.rs
app/sql/src/lessors/: mod.rs
app/sql/src/test_table/: mod.rs
app/sql/src/users/: mod.rs
db/: Dockerfile  migrate.sh
db/schema/: 1_init.sql
graphiql/: graphiql.html
