[package]
name = "ws_sql"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [
  "json",
  "mysql",
  "runtime-actix-native-tls",
  "chrono",
  "macros",
  "decimal",
] }

[dev-dependencies]
tokio = { version = "1.19", features = ["macros"] }